--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Nolan Lo"
   pronouns         : # example: "he/him"  
-  bio              : "Data Science Master's Student"
+  bio              : "Data Science Masters Student"
   location         : "Los Angeles, CA"
   employer         : "University of California, San Diego"
   uri              : # URL
