--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "he/him"  
   bio              : "Data Science Masters Student"
   location         : "Los Angeles, CA"
-  employer         : "University of California, San Diego"
+  employer         : "UC, San Diego"
   uri              : # URL
   email            : "nolanlo.dsc@gmail.com" 
 
