--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Nolan's Homepage"
+title                    : "Homepage"
 title_separator          : "-"
 name                     : &name "Nolan Lo"
 description              : &description "personal description"
