--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,6 @@ main:
     url: /portfolio/
     
   - title: "CV"
-    url: /files/Resume - Baseball.pdf
+    url: /files/Resume - Data Science.pdf
     
 
